# pastoralcentre-pl

./: README.md  all_pages.json  extract_images.py  extract_pages.py  extract_urls.py  pyproject.toml
articles/: 2.html  3.html  3423-2.html  360-2.html  3pm-the-hour-of-mercy-divine-mercy-sunday-april-11.html  40-days-life-campaign-lent-2015.html  4007-2.html  4045-2.html  4080-2.html  80-worshipers-allowed-in-our-church.html  about.html  adult-education-information-meeting-9-may-at-1700.html  advent-giving.html  advent-is-coming.html  advent-is-near-2.html  advent-is-near.html  advent-wreath.html  advent.html  all-parish-meetings-cancelled.html  anniversary-mass.html  announcements-1-december-2013.html  announcements-10-august-2014.html  announcements-11-2014.html  announcements-12-october-2014.html  announcements-13-april-2014.html  announcements-15-2016.html  announcements-15-august-2013.html  announcements-16-march-2014.html  announcements-17-november-2013.html  announcements-18-august-2013.html  announcements-19-october-2014.html  announcements-20-april-2014.html  announcements-20-march-2016.html  announcements-21-june-2014.html  announcements-23-march-2014.html  announcements-23-november-2013.html  announcements-25-october-2015.html  announcements-27-april-2014.html  announcements-29-june-2015.html  announcements-31-2015.html  (+97 more)
